--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,8 @@
 {
   "short_name": "DeepFake Detector",
   "name": "DeepFake Detection App",
+  "manifest_version": 2,
+  "version": 1,
   "icons": [
     {
       "src": "favicon.ico",
